Refactored to to run multi-threaded; this verifies the expression cache and volatile AST node cache usage do not induce errors.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jexl/trunk@896643 13f79535-47bb-0310-9956-ffa450edef68